--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -20,3 +20,5 @@ serde_json  = { version = "1.0", features = ["raw_value"] }
 cron-parser = "0.8.0"
 jsonwebtoken = "8.3.0"
 dotenv = "0.15.0"
+gcp_auth = "0.9.0"
+reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
