--- a/.github/workflows/release-backend.yaml
+++ b/.github/workflows/release-backend.yaml
@@ -12,7 +12,8 @@ env:
   DOCKER_BUILDKIT: 1
 
 jobs:
-  build:
+  build-publish:
+    permissions: write-all
     runs-on: ubuntu-latest
     defaults:
       run:
