--- a/.github/workflows/check-backend.yaml
+++ b/.github/workflows/check-backend.yaml
@@ -42,9 +42,5 @@ jobs:
         working-directory: backend
     steps:
       - uses: actions/checkout@v2
-      - uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/setup-buildx-action@v3
       - run: docker build -t $IMAGE_NAME:latest .
