--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,7 +14,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 slab = "0.4.4"
 serde = { version = "1", features = ["derive"] }
-sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite", "chrono", "json", "migrate" ] }
+sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "chrono", "json", "migrate" ] }
 chrono = { version = "0.4", features = ["serde"] }
 serde_json  = { version = "1.0", features = ["raw_value"] }
 cron-parser = "0.8.0"
@@ -22,3 +22,4 @@ jsonwebtoken = "8.3.0"
 dotenv = "0.15.0"
 gcp_auth = "0.9.0"
 reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
+openssl = { version = "0.10", features = ["vendored"] }
