--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -24,3 +24,4 @@ gcp_auth = "0.9.0"
 reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
 openssl = { version = "0.10", features = ["vendored"] }
 thirtyfour = "0.31.0"
+base64 = "0.21.4"
