--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -25,3 +25,7 @@ reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing 
 openssl = { version = "0.10", features = ["vendored"] }
 thirtyfour = "0.31.0"
 base64 = "0.21.4"
+youtube_dl = { version =  "0.9.0", features = ["tokio", "downloader-rustls-tls"] }
+lazy_static = "1.4.0"
+tempfile = "3.8.0"
+
