--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,7 +21,11 @@ cron-parser = "0.8.0"
 jsonwebtoken = "8.3.0"
 dotenv = "0.15.0"
 gcp_auth = "0.9.0"
-reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
+reqwest = { version = "0.11", features = ["json", "multipart"] } # reqwest with JSON parsing support
 openssl = { version = "0.10", features = ["vendored"] }
 thirtyfour = "0.31.0"
 base64 = "0.21.4"
+youtube_dl = { version =  "0.9.0", features = ["tokio", "downloader-rustls-tls"] }
+lazy_static = "1.4.0"
+tempfile = "3.8.0"
+
