--- a/.github/workflows/check-backend.yaml
+++ b/.github/workflows/check-backend.yaml
@@ -1,14 +1,12 @@
-name: Backend - PR Check
+name: PR Check
 
 on:
   pull_request:
     branches:
       - main
-    paths:
-      - 'backend/**'
 
 env:
-  IMAGE_NAME: ghcr.io/mrsupiri/toolkit/backend
+  IMAGE_NAME: ghcr.io/mrsupiri/toolkit
   DOCKER_BUILDKIT: 1
 
 jobs:
@@ -17,7 +15,6 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: backend
     steps:
       - uses: actions/checkout@v2
       - name: Set up Rust
@@ -39,7 +36,6 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: backend
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-buildx-action@v3
