--- a/.github/workflows/release-backend.yaml
+++ b/.github/workflows/release-backend.yaml
@@ -1,14 +1,12 @@
-name: Backend - Release
+name: Release
 
 on:
   push:
     branches:
       - main
-    paths:
-      - 'backend/**'
 
 env:
-  IMAGE_NAME: ghcr.io/mrsupiri/toolkit/backend
+  IMAGE_NAME: ghcr.io/mrsupiri/toolkit
   DOCKER_BUILDKIT: 1
 
 jobs:
@@ -18,7 +16,6 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: backend
     steps:
       - uses: actions/checkout@v2
       - uses: docker/login-action@v1
