--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,12 +7,14 @@ services:
       - "3000:3000"
     volumes:
       - ./service_accounts:/usr/src/app/service_accounts
-      - ./toolkit.sqlite:/usr/src/app/toolkit.sqlite
       - .env:/usr/src/app/.env
+      - ./db:/usr/src/app/db
     depends_on:
       - selenium
+    restart: always
   selenium:
     image: selenium/standalone-chrome:latest
     ports:
       - "4444:4444"
     shm_size: '2g'
+    restart: always
