--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ poem-openapi = { version = "3", features = ["swagger-ui", "openapi-explorer", "c
 tokio = { version = "1", features = ["full"] }
 poem = "1"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = {version="0.3", features = ["env-filter"]}
 slab = "0.4.4"
 serde = { version = "1", features = ["derive"] }
 sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "chrono", "json", "migrate" ] }
