--- a/.github/workflows/check-backend.yaml
+++ b/.github/workflows/check-backend.yaml
@@ -6,7 +6,6 @@ on:
       - main
 
 env:
-  IMAGE_NAME: ghcr.io/mrsupiri/toolkit
   DOCKER_BUILDKIT: 1
 
 jobs:
@@ -22,13 +21,9 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-      - name: Setup sqlx
-        run: |
-          cargo install sqlx-cli
-          sqlx db setup --database-url=sqlite:toolkit.db
       - name: Build and test
         run: |
-          export DATABASE_URL=sqlite:toolkit.db
+          export SQLX_OFFLINE=true
           cargo build --verbose
           cargo test --verbose
   build:
@@ -39,4 +34,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-buildx-action@v3
-      - run: docker build -t $IMAGE_NAME:latest .
+      - run: docker build -t ghcr.io/${GITHUB_REPOSITORY}:latest .
